manual/manifests/wso2/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apim-wso2
  labels:
    app.kubernetes.io/name: apim-wso2
